--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -38,6 +38,9 @@
             <TextBlock x:Name="DelayText" Text="500ms" Margin="10" TextAlignment="Center" FontSize="26.667" />
             <TextBlock x:Name="GpioStatus" Text="Waiting to initialize GPIO..." Margin="10,50,10,10" TextAlignment="Center" FontSize="26.667" />
             <TextBlock x:Name="txtblockTime" FontSize="25.667" />
+            <TextBlock x:Name="txtBlockURLLength" FontSize="25.667" />
+            <Button x:Name="btnTest" Click="btnTest_Click">Button</Button>
+
         </StackPanel>
     </Grid>
 </Page>
