--- a/StartPage.xaml
+++ b/StartPage.xaml
@@ -21,7 +21,7 @@
 
 
 <Page
-    x:Class="SparkPi.MainPage"
+    x:Class="SparkPi.StartPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SparkPi"
