--- a/SparkPi/StartPage.xaml
+++ b/SparkPi/StartPage.xaml
@@ -39,7 +39,7 @@
 
             <TextBlock x:Name="DelayText" Text="500ms" Margin="10" TextAlignment="Center" FontSize="26.667" />
             <TextBlock x:Name="GpioStatus" Text="Waiting to initialize GPIO..." Margin="10,50,10,10" TextAlignment="Center" FontSize="26.667" />
-            <TextBlock x:Name="txtblockTime" FontSize="25.667" />
+            <TextBlock x:Name="txtblockTime" FontSize="25.667" Foreground="White" />
             <TextBlock x:Name="txtBlockURLLength" FontSize="25.667" />
 
             <StackPanel Orientation="Horizontal" >
